Fix footer width on mobile view

--- a/lotto/src/Components/Footer/footer.css
+++ b/lotto/src/Components/Footer/footer.css
@@ -29,7 +29,7 @@
 
 @media only screen and (max-width: 390px) {
   .footer {
-    width: 130%;
+    width: 111%;
   }
 }
 
@@ -43,9 +43,11 @@
     color: #534D56;
     text-align: center;
     font-size: 0.8rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     
   }
-}
+
 
 @media only screen and (min-width: 1280px) and (max-width: 1600px) {
   .footer {
